2006-04-18  John Ehresman   <jpe@wingware.com>

	* dsextras.py: Add compiler / linker flags from pkgconfig-2.0.pc
	by default, with an override mechanism.  Filter out -lc & -lm if
	compiling with msvc.

	* setup.py: Change C extension name to _gobject and don't use the
	pkgconfig-2.0.pc when compiling

2006-04-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/__init__.py (_PyGObject_API): Copy _PyGObject_API from
	gobject._gobject into gobject in order to preserve binary
	compatibility with 3rd party modules.

	* gobject/pygobject.h (init_pygobject): Import gobject, gobject._gobject.

	* gobject/Makefile.am: Fix pygobject installation dir: install
	both _gobject.la and __init__.py into
	$(pyexecdir)/gtk-2.0/gobject.

2006-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c (init_gobject): 
	* gobject/__init__.py:
	Move over almost all GType constants from C to Python.

2006-04-11  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/__init__.py:
	* gobject/gobjectmodule.c (_wrap_pyg_type_register),
	(pyg__install_metaclass, init_gobject):  GObjectMeta now moved to
	python-land (__init__.py).
	
	* gobject/pygobject-private.h:
	* gobject/pygobject.c (pygobject_register_class):
	PyGObject_MetaType is now a pointer, not structure.

	* gobject/gobjectmodule.c (_wrap_pyg_type_register): Add optional
	type name parameter.

	* tests/common.py (importModule): Include original exception
	string in the raised SystemExit.

2006-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/.cvsignore:
	* gobject/Makefile.am:
	* gobject/__init__.py:
	* gobject/gobjectmodule.c: (init_gobject):
	* gobject/pygobject.h:
	* tests/Makefile.am:
	* tests/common.py:

	Turn gobject into a package; move _gobject to gobject._gobject and
	add gobject/__init__.py. Update macros and testsuite.

2006-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac: Post release version bump

=== PyGObject 2.10.1 ===
2006-04-11  Johan Dahlin  <jdahlin@async.com.br>
